[gd_scene load_steps=2 format=3 uid="uid://lluw6cj5llqb"]

[ext_resource type="Script" uid="uid://b4gt61l1hy4tq" path="res://scripts/hit_zone.gd" id="1_grp1m"]

[node name="Hit-zone" type="Area2D"]
script = ExtResource("1_grp1m")

[node name="Delay" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
